--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
 	"devDependencies": {
 		"@fortawesome/fontawesome-free": "^5.10.1",
 		"css-loader": "^1.0.0",
-		"extract-text-webpack-plugin": "^4.0.0-beta.0",
 		"file-loader": "^1.1.11",
-		"node-sass": "^4.9.3",
+		"mini-css-extract-plugin": "^0.9.0",
+		"node-sass": "^4.13.1",
 		"resolve-url-loader": "^3.0.0-alpha.1",
 		"sass-loader": "^7.1.0",
 		"style-loader": "^0.22.1",
